--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,7 +19,7 @@
 
 	<section id="welcome">
 		<header>
-			<img src="" alt="Leigh - The Author of this Blog"/>
+			<img src="{% static "blog/images/1670316828419.jfif" %}" alt="Leigh - The Author of this Blog"/>
 			<h2>LEIGH'S BLOG</h2>
 		</header>
 			<p>Hi, I am Leigh and I love to blog about tech and the world</p>
@@ -32,7 +32,7 @@
 			<li>
 				<article class="post">
 					<a href="">
-						<img src="" alt="Mountain Hiking"/>
+						<img src="{% static "blog/images/mountains.jpg" %}" alt="Mountain Hiking"/>
 						<div class="post__content">
 							<h3>Mountain Hiking</h3>
 							<p>
