--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header id="main-navigation">
-		<h1><a href="">Leigh's Blog</a></h1>
+		<h1><a href="{% url "starting-page" %}">Leigh's Blog</a></h1>
 		<nav>
 			<a href="">All Posts</a>
 		</nav>
