--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-	This Post Title
+	{{ post.title }}
 {% endblock %}
 
 {% block css_files %}
@@ -11,28 +11,17 @@
 
 {% block content %}
 	<section id="summary">
-		<h2>Post Title</h2>
+		<h2>{{ post.title }}</h2>
 		<article>
-			<img src="{% static  "blog/images/mountains.jpg" %}" alt="Post Title" />
-			<address>By Leigh</address>
+			<img src="{% static  "blog/images/"|add:post.image %}" alt={{ post.title }} />
+			<address>By {{ post.author }}</address>
 			<div>
-				Last updated on <time>July 10th</time>
+				Last updated on <time>{{ post.date|date:"d M Y" }}</time>
 			</div>
 		</article>
 	</section>
 
 	<main>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque aut ea exercitationem fuga,
-			hic iusto maxime modi nemo neque nesciunt quae qui reiciendis temporibus tenetur unde vel, voluptatem voluptates.
-		</p>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque aut ea exercitationem fuga,
-			hic iusto maxime modi nemo neque nesciunt quae qui reiciendis temporibus tenetur unde vel, voluptatem voluptates.
-		</p>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque aut ea exercitationem fuga,
-			hic iusto maxime modi nemo neque nesciunt quae qui reiciendis temporibus tenetur unde vel, voluptatem voluptates.
-		</p>
+		{{ post.content|linebreaks }}
 	</main>
 {% endblock %}
