--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 	<header id="main-navigation">
 		<h1><a href="{% url "starting-page" %}">Leigh's Blog</a></h1>
 		<nav>
-			<a href="">All Posts</a>
+			<a href="{% url "posts-page" %}">All Posts</a>
 		</nav>
 	</header>
 
